# peripheral-emulator-bridge

./: .gitignore  CMakeLists.txt  README.md  deviceControl.cpp  deviceControl.h  main.cpp  pico_sdk_import.cmake  pulsePins.cpp  pulsePins.h  secondCore.cpp  secondCore.h  serialCommunication.cpp  serialCommunication.h
